Added git importer method. Small changes to allow the use of URLs.